test/neg/NonLinear.smt2_
; Uninterpreted Sorts
(declare-sort List 1)


; Constants


; Distinct Constants


; Uninterpreted Functions


; Qualifiers


; Well-formedness constraints
(wf $k0 ((vk01 Int)(vk02 Int)))


; Horn constraints
(constraint (forall ((pig Int)(pigOut Int)(v1 Int)) (=> (and True (and (= pigOut (+ pig 1)) (= v1 pigOut))) ($k0 pig v1))))
(constraint (forall ((argAlice Int)(alice Int)(argBob Int)(bob Int)(v2 Int)) (=> (and (= argAlice 10) (and ($k0 argAlice v) (and (= argBob 20) (and ($k0 argBob v) True)))) False)))
